--- a/css/style2.css
+++ b/css/style2.css
@@ -7,8 +7,11 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #E2A169;
+   
 }
-
+section{
+    padding: 0 35px;
+}
 header {
     display: flex;
     align-items: center;
@@ -36,7 +39,7 @@ header {
 }
 
 .titulo h3 {
-    color: #f2a745; /* Cor do texto "escola infantil" */
+    color: #f2a745; 
 }
 
 nav {
@@ -54,7 +57,7 @@ nav a {
 }
 
 nav a:hover {
-    text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+    text-decoration: underline; 
 }
 
 .social-icons {
@@ -66,96 +69,68 @@ nav a:hover {
     width: 30px;
     height: 30px;
 }
-
 .img {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin: 20px ;
-}
-
-.imgFachada img {
-    width: 525px; /* Aumenta o tamanho da fachada */
-    height: 525px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.imgPatioEscola {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.imgPatioEscola img {
-    width: 310px; /* Aumenta a largura das imagens do pátio e da escola */
-    height: 250px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.sobreNos {
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 40px;
+    display: flex;
 }
 
-.sobreNosContent {
-    display: flex; /* Usando flexbox */
-    align-items: flex-start; /* Alinhando o topo dos itens */
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    margin: 40px 0; /* Margem superior e inferior */
-
-    width: 100%; /* Ocupa a largura total disponível */
+.imgG{
+    height: 880px;
+    width: 600px;
 }
 
-.sobreNosContent h3 {
-    max-width: max-content; /* Largura máxima para o texto */
-    color: black;
+.imgP{
+    display: flex;
+    flex-direction: column; 
+    height: 300px;
+    width: 300px;
 }
 
-.sobreNosContent img {
-    border-radius: 10px; /* Bordas arredondadas */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-    width: 500px; /* Largura da imagem */
-    height: auto; /* Mantém a proporção da imagem */
-    margin-left: 40px; /* Adiciona margem esquerda para afastar a imagem do texto */
+.imgp img {
+    height: 300px;
+    width: 300px;
+}
+
+.imgG img {
+    width: 100%; 
+    height: auto; 
 }
 .div1{
     display: flex;
     width: 100%; 
-    height: 500px;
+}
+.div1 p{
+    width: 70px;
+    font-weight: bold;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 .Mat{
-    display: flex;
     width: 33.33%;
     color: white;
-    padding-left: 50px;
-    padding-top: 75px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 40px;
 }
 .Cre{
     width: 33.33%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 50px;
-    padding-top: 75px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 40px;
 }
 .Pre{
     width: 33.33%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 50px;
-    padding-top: 75px;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 40px;
 }
 .Tabela{
     width: 50%;
-    margin-left: 300px;
-    margin-bottom: 200px;
-    color: white;
-    border-right: ;
+    margin-left: 200px;
+    
 }
 .linhaVerde{
     width: 100%;
@@ -166,50 +141,55 @@ nav a:hover {
     width: 100%;
     display: flex;
 }
+.vazia{
+    width: 100%;
+    display: flex;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(47, 47, 184);
+}
 .C, .Hr, .Din{
     width: 33.33%;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
 }
 .Quadrado{
+    margin-bottom: 40px;
     background-color: #1F6C43;
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     color: white;
     display: flex;
     flex-direction: column;
     padding: 10px 10px 0 10px;
-    margin-left:50px ;
-    margin-bottom: 100px;
-    
 }
 .footer {
     display: flex;
     align-items: center;
-    justify-content: space-around; /* Distribui os itens uniformemente */
+    justify-content: space-around; 
     background-color: #1F6C43;
     color: white;
-    height: 250px;
+    height: 320px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: large;
-    padding: 20px; /* Adiciona um espaço interno ao footer */
+    padding: 20px; 
 }
 
 .footer a {
-    text-decoration: none; /* Remove o sublinhado padrão dos links */
-    color: white; /* Altera a cor do texto para branco (ou outra cor desejada) */
+    text-decoration: none; 
+    color: white;
 }
 
 .footer a:hover {
-    text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+    text-decoration: underline; 
 }
 
 .footer div {
-    display: flex; /* Flex para alinhar ícones e texto em linha */
-    align-items: center; /* Centraliza verticalmente os itens */
-    gap: 10px; /* Espaço entre o ícone e o texto */
+    display: flex;
+    align-items: center; 
+    gap: 10px; 
 }
 
 .footer img {
